# slog

./: .clang-format  CMakeLists.txt
include/: logger.h  logger_threads.h  slog_file.h  slog_threads.h
include/slog/: slog.h  slog_api.h
source/: logger.c  logger_threads_unix.c  logger_threads_windows.c  slog.c  slog_file_unix.c  slog_threads_unix.c  slog_threads_windows.c
